fix padding so that it doesn't overlap the navbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 CContainer {
-    padding: 40px;
-  }
+  padding: 30px;
+}
 
 html {
-    font-family: din-next-w01-light,  sans-serif;
+  font-family: din-next-w01-light,  sans-serif;
 }
